--- a/Music-Genre-Classification.ipynb
+++ b/Music-Genre-Classification.ipynb
@@ -36,6 +36,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-  We use the GTZAN dataset which has been the most widely used in the music genre classification task. The dataset contains 30-second audio files including 10 different genres including reggae, classical, country, jazz, metal, pop, disco, hiphop, rock and blues."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -84,6 +98,13 @@
    ],
    "source": [
     "IPython.display.Audio(data=y, rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Each audio file was converted into a spectrogram which is a visual representation of spectrum of frequencies over time. "
    ]
   },
   {
@@ -775,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +819,7 @@
     "\n",
     "plt.title(\"\\nMel-Frequency Cepstral Coefficients for each genra\", fontsize=15)\n",
     "\n",
-    "plt.show()"
+    "plt.savefig(\"D:/DataScienceFoundation/SpringBoard/Capstone Project2/mel.png\")"
    ]
   },
   {
@@ -810,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +854,14 @@
     "                       \"rolloff\",'zero_crossing_rate','mfcc1','mfcc2','mfcc3','mfcc4',\n",
     "                       'mfcc5','mfcc6' ,'mfcc7','mfcc8','mfcc9','mfcc10','mfcc11','mfcc12',\n",
     "                     \"mfcc13\", \"mfcc14\",'mfcc15','mfcc16','mfcc17','mfcc18', 'mfcc19','mfcc20']].corr(), annot=True)\n",
-    "plt.show()"
+    "plt.savefig(\"D:/DataScienceFoundation/SpringBoard/Capstone Project2/correlation.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inferential Statistics"
    ]
   },
   {
